When displaying netstat details with libxo in JSON or XML modes, the value conversion for tcp6 and udp6 port numbers drops last digit.

PR:		215682
MFC after:	3 days

Former-commit-id: e858df79d38785ae4ae9db5e24881164a4a1fe06